Fix invisible carousels on iOS <=6 with .hidden children

--- a/css/src/site/partials/_carousel.scss
+++ b/css/src/site/partials/_carousel.scss
@@ -22,6 +22,10 @@
 		height: 100%;
 		position: relative;
 	}
+	
+	.hidden {
+		-webkit-transform: translate3d(0,0,0); // Fixes invisible carousels on iOS <=6?
+	}
 }
 
 .carousel {
